--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,14 @@ dependencies {
     testImplementation 'org.testng:testng:6.9.10'
 
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
-    implementation 'org.seleniumhq.selenium:selenium-java:4.21.0'
+    // implementation 'org.seleniumhq.selenium:selenium-java:4.21.0'
+    // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
+    implementation 'org.seleniumhq.selenium:selenium-java:4.33.0'
 
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+    // implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.2'
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
 }
 
 buildDir = 'build'
